--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: any
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +51,12 @@ flutter:
     - assets/images/champs/aatrox.png
     - assets/images/champs/ashe.png
     - assets/images/champs/aphelios.png
-
+    - assets/images/icon/gold.png
+    - assets/images/icon/gold1.png
+    - assets/images/icon/ic_back.png
+    - assets/images/icon/riot.png
+    - assets/images/icon/helmet.png
+    - assets/images/icon/sword.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
